<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.cardchallenge.viewmodel.CardInfoVM" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0C2233"
        android:orientation="vertical"
        tools:context=".CardInfoFinderActivity">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/card"
            android:textSize="36sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginLeft="@dimen/margin_16"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_marginRight="@dimen/margin_16"
            android:background="@drawable/card_view2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/card_scheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/margin_23"
                android:layout_marginEnd="@dimen/margin_23"
                android:layout_marginRight="@dimen/margin_23"
                android:fontFamily="@font/roboto_slab_bold"
                android:textColor="@color/white"
                android:text="@{viewModel.cardInfo.scheme}"
                tools:text="VISA" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_27"
                android:layout_marginLeft="@dimen/margin_27"
                android:layout_marginTop="5dp"
                app:srcCompat="@drawable/ic_group_49"
                android:contentDescription="@null" />

            <EditText
                android:id="@+id/cardNumberEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_27"
                android:layout_marginLeft="@dimen/margin_27"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:cursorVisible="false"
                android:fontFamily="@font/ocra_ext"
                android:hint="@string/hint_message"
                android:textColor="@color/white"
                android:maxLength="16"
                android:text="@={viewModel.cardNumber}"
                android:textColorHint="@color/white"
                android:textSize="18sp"
                android:importantForAutofill="no"
                android:inputType="number" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/proceed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/get"
            android:textColor="@color/white"
            android:onClick="@{() -> viewModel.getCard()}"
            style="@style/ButtonStyle"
            android:visibility="invisible"/>

        <RelativeLayout
            android:id="@+id/card_info_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/card_brand"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@{String.format(@string/card_brand, viewModel.cardInfo.component3())}" />

            <TextView
                android:id="@+id/card_type"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_brand"
                android:text="@{String.format(@string/card_type, viewModel.cardInfo.component2())}" />

            <TextView
                android:id="@+id/bank"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_type"
                android:text="@{String.format(@string/bank, viewModel.cardInfo.bank.component1())}" />

            <TextView
                android:id="@+id/country"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/bank"
                android:text="@{String.format(@string/country, viewModel.cardInfo.country.component1())}" />
        </RelativeLayout>

        <TextView
            android:id="@+id/no_data_view"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:text="@string/no_data_view"
            android:visibility="gone" />
    </LinearLayout>
</layout>